fix: fix gap between rows

--- a/blocks/donation-form/__radiobuttons-container/_for/donation-form__radiobuttons-container_for_methods.css
+++ b/blocks/donation-form/__radiobuttons-container/_for/donation-form__radiobuttons-container_for_methods.css
@@ -8,5 +8,6 @@
 @media screen and (max-width: 767px) {
   .donation-form__radiobuttons-container_for_methods {
     grid-template: repeat(3, 1fr) auto / minmax(auto, 260px);
+    gap: 16px;
   }
 }
